# ferm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  backup.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  webhook.py
.github/workflows/: deploy.yml
app/: auth.py  backup.py  config.py  database.py  lot_code.py  main.py  seed.py  templates.py
app/models/: __init__.py  additive.py  audit.py  ferment.py  ingredient.py  log.py  lookup.py  measurement.py  observation.py  schedule.py  tool.py  user.py
app/routers/: __init__.py  additives.py  auth.py  batches.py  dashboard.py  ferments.py  ingredients.py  logs.py  schedules.py  settings.py  tools.py  users.py
app/static/css/: main.css
app/templates/: 404.html  base.html  base_detail.html  base_form.html  base_list.html  dashboard.html  login.html
app/templates/additives/: edit.html  list.html  new.html
app/templates/batches/: detail.html  log_edit.html  new.html
app/templates/ferments/: delete_confirm.html  detail.html  edit.html  list.html  new.html
app/templates/ingredients/: edit.html  list.html  new.html
app/templates/schedules/: detail.html  edit.html  list.html  new.html
app/templates/settings/: index.html
app/templates/tools/: edit.html  list.html  new.html
app/templates/users/: detail.html  edit.html  list.html  new.html  password.html  profile.html
docs/: nas-setup.md
tests/: conftest.py  test_additives.py  test_auth.py  test_dashboard.py  test_ferments.py  test_ingredient.py  test_log.py  test_lot_code.py  test_schedules.py  test_settings.py  test_tools.py  test_users.py
